# fy-search

./: .gitignore  LICENSE  README.md  dev_run.py  file_search_app_dark.py  pyproject.toml  run_fy_search.py
fy_search/: __init__.py  __main__.py  app.py  file_icons.py  main.py  search.py  settings.py  ui.py
fy_search/assets/: README.md
packaging/: build_nuitka.py
packaging/linux/: README.md  build-pyinstaller.sh  fy-search.desktop
packaging/linux/appimage/: README.md  build.sh
packaging/linux/deb/: README.md  build.sh
packaging/pyinstaller/: fy_search.spec
tests/: test_entrypoint.py  test_search.py  test_settings.py  test_ui_settings.py  test_ui_sorting.py
